--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,3 @@
-[theme]
-primaryColor="#32c398"
-backgroundColor="#4c4646"
-secondaryBackgroundColor="#80838a"
-textColor="#d6d7de"
-font="monospace"
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
