--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,2 +1,6 @@
 [theme]
- jekyll-theme-hacker
+primaryColor="#32c398"
+backgroundColor="#4c4646"
+secondaryBackgroundColor="#80838a"
+textColor="#d6d7de"
+font="monospace"
